# langywrap

./: .coverage  .gitignore  .gitmodules  CLAUDE.md  README.md  install.md  install.sh  just  justfile  pyproject.toml  test_execwrap_rtk_integration.sh  uv
.claude/: HOOKS_DISABLED.md  settings.json
.claude/hooks/: rtk-rewrite.sh
.opencode/command/: inspect-projects.md
configs/: .pre-commit-config.yaml  claude-settings-global.json  claude-settings-local.json  claude-settings.json  code-quality.md  opencode-global-config.json
configs/docker/: run-sandbox.sh
configs/semgrep/: dangerous-operations.yaml
docs/: AI_AGENT_SECURITY_RESEARCH.md  ORCHESTRATOR_GUIDE.md
docs/processes/: line_saving_opportunities.md
docs/solutions/: 2026-01-01_test_solution.md  2026-05-03_ralph_dry_run_probe_wiring.md  2026-05-12_anti_mode_collapse_unification.md  _template.md  (+7 more)
execsec_original/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLE_USAGE.md  FINAL_SUMMARY.md  LICENSE  ORCHESTRATOR_SUMMARY.md  PROJECT_STATUS.md  README.md  SECURITY.md  SUMMARY.txt  init-git.sh  justfile
execwrap/: README.md  execwrap.bash  preload.sh  settings.json  test.sh
harden/: harden.sh  secure-run.sh
notes/: 128gb-minimax-m2.5.md  8gb-gpu-minimax-analysis.md  agent-task-db-prior-art-research.md  agent-task-db-requirements.md  dgx-spark-cloud-rental.md  minimax-parallel-workloads.md  nvidia-dgx-spark-minimax-analysis.md  opencode-gpt-opuslike-prompting-research.md  todos.txt
scripts/: build_graphify.sh  build_openwolf.sh  build_rtk.sh  build_textify.sh  couple.sh  disk_monitor.sh  ralph_loop.sh  test_opencode_execwrap.sh
skills/: analyze-intents.md  compound-engineering.md  compound.md  dataframe-alternatives.md  execwrap-setup.md  export-inputs.md  graphify-setup.md  harden-wizard.md  inspect-projects.md  migrate-to-langywrap.md  ralph-loop.md  ralph-prompt-audit.md  ralph-token-rates.md  setup-output-filtering.md  spec-driven.md  validate-fix.md
spec/: 00_research_index.md  05_rtk_analysis.md  06_hyperagents_paper.md  07_memento_paper.md  08_compound_engineering.md  10_synthesis_architecture.md  11_decisions_log.md  12_known_issues_todos.md  13_origin_map.md  examples.py  improvements.txt
tests/: conftest.py  test_quick_wins.py  test_tagged_tools.py
(+160 files in other folders)
