[project]
name = "langywrap"
version = "0.1.5"
description = "Universal AI agent orchestration toolkit — execution security, ralph loops, hyperagents, compound engineering"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyyaml",
    "click",
    "pydantic",
]

[project.optional-dependencies]
lean = []
data = [
    "duckdb",
    "polars",
]
thinking-loop = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]
# Vendored submodule tools — editable installs resolved via [tool.uv.sources].
# Install via: ./just install-textify / ./just install-graphify, or:
#   uv sync --extra knowledge-graph
knowledge-graph = [
    "textify[full]",
    "graphifyy",
]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pytest-xdist",
]

[tool.uv.sources]
textify = { path = "textify", editable = true }
graphifyy = { path = "graphify", editable = true }

[project.scripts]
langywrap = "langywrap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/langywrap"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
pretty = false

[tool.pytest.ini_options]
addopts = "-q --tb=short"
